samples/_failures_safe/1761176805_30fc57_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f7af798.c: In function ‘main’:
./samples/SAFE/__tmp_0f7af798.c:207: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_0f7af798.c:206:5: error: expected declaration or statement at end of input
  206 |     for
      |     ^~~
